Separation between constants